--- a/index.html
+++ b/index.html
@@ -94,14 +94,15 @@ Group coding
 <li>You aren’t bothered by having five object systems</li>
 </ul>
 </section>
-<section id="my-take" class="slide level1">
-<h1>My take</h1>
+<section id="imho" class="slide level1">
+<h1>IMHO</h1>
 <p> </p>
 <ul>
 <li>pandas has far fewer gotchas, and they are documented</li>
 <li>Python has less special syntax (verbosity vs clarity)</li>
 <li>Having one language is a big win</li>
 <li>Machine learning is stronger in Python</li>
+<li>Cython is very pleasant to use</li>
 </ul>
 <p> </p>
 <ul>
