Link to server!

--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@ Group coding
 <li>Statistics is much stronger in R</li>
 </ul>
 </section>
+<section id="onto-the-class" class="slide level1">
+<h1>Onto the class!</h1>
+<div style="font-size: 1.7em">
+<a href="https://jupyterhub.fhcrc.org">https://jupyterhub.fhcrc.org</a>
+</div>
+<p> </p>
+<p>Notes:</p>
+<ul>
+<li><code>https</code> is important</li>
+<li>use your Fred Hutch login</li>
+<li>only available behind firewall</li>
+<li>CIT wants your feedback!</li>
+<li>use your red sticky note</li>
+</ul>
+</section>
     </div>
   </div>
 
