--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Group coding
 <ul>
 <li>Classical statistical modeling is your primary goal</li>
 <li>There are packages that suit your needs (e.g. Bioconductor)</li>
-<li>Everyone in your sub-discipline use R</li>
+<li>Everyone in your sub-discipline uses R</li>
 <li>Systems-level programming is less of a concern</li>
 <li>You aren’t bothered by having five object systems</li>
 </ul>
@@ -110,6 +110,9 @@ Group coding
 <li>ggplot2 is better than Matplotlib</li>
 <li>Statistics is much stronger in R</li>
 </ul>
+</section>
+<section id="what-a-notebook-looks-like" class="slide level1">
+<h1>What a notebook looks like</h1>
 </section>
 <section id="onto-the-class" class="slide level1">
 <h1>Onto the class!</h1>
